<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">" travel expense tracking"</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_claim">ClaimActivity</string>
    <string name="title_activity_add_expense">AddExpenseActivity</string>
    <string name="title_activity_email_claim">EmailClaim</string>
    <string name="title_activity_claims">Claims</string>
    <string name="button_text_plus_sign">+</string>
    <string name="prompt_name">Name:</string>
    <string name="prompt_date">  Date: (DD-MM-YYYY)</string>
    <string name="prompt_category">  Category:</string>
    <string name="prompt_descriptoion">  Description:</string>
    <string name="prompt_amount_spend">  Amount Spend:</string>
    <string name="prompt_unit_of_currency">  Unit:</string>
    <string name="prompt_new_expemse">New Expense:</string>
    <string name="prompt_new_claim_name">New Claim Name:</string>
    <string name="button_done">Done</string>
    <string name="button_cancel">Cancel</string>
    <string name="new_expense">New Expense</string>
    <string name="title_activity_add_claim">AddClaimActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="prompt_expense_name">New Expense Name:</string>
    <string name="new_claim">New Claim</string>
    <string name="prompt_status">Status:</string>
    <string name="prompt_start_date">Start Date:</string>
    <string name="prompt_end_date">End Date:</string>
    <string name="prompt_day">DD</string>
    <string name="prompt_month">MM</string>
    <string name="prompt_expense_year">YYYY  (Date)</string>
    <string name="prompt_claim_start_year">YYYY  (Start)</string>
    <string name="prompt_claim_end_year">YYYY ( End)</string>
    <string name="text_view_email">Target Email Address:</string>
    <string name="list_item_empty">(empty)</string>
    <string name="title_activity_claim_list_adapter">ClaimListAdapter</string>
    <string name="button_text_remove">Remove</string>
    <string name="button_text_edit">Edit</string>
    <string name="button_text_cancel">Cancel</string>
    <string name="button_text_email">Email</string>
    <string name="title_activity_edit_claim">EditClaimActivity</string>
    <string name="title_activity_edit_expense">EditExpenseActivity</string>
    <string name="title_email">Email Claim</string>
    <string name="prompt_email">Email Address</string>
    <string name="button_send">Send</string>
    <string name="button_return">Return</string>
    <string name="button_approve">Approve</string>
    <string name="title_edit_claim">Edit Claim</string>
    <string name="title_edit_expense">Edit Expense</string>


</resources>
