<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:minWidth="150dp" 
 	android:minHeight="200dp"
    android:background="@color/white" >


		<Button
		    android:id="@+id/buttonEmailDialog"
		    style="?android:attr/buttonStyle"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:text="@string/button_text_email" 
		    android:layout_margin="2dp"
		    android:layout_marginBottom="1dp"
		    android:background="@color/skyblue"
		    android:textColor="@color/white"/>

		<Button
		    android:id="@+id/buttonEditClaimDialog"
		    style="?android:attr/buttonStyle"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:text="@string/button_text_edit" 
		    android:background="@color/skyblue"
		    android:layout_margin="2dp"
		    android:layout_marginBottom="1dp"
		    android:textColor="@color/white"/>

		<Button
		    android:id="@+id/buttonRemoveClaimDialog"
		    style="?android:attr/buttonStyle"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:text="@string/button_text_remove" 
		    android:background="@color/skyblue"
		    android:layout_margin="2dp"
		    android:textColor="@color/white"/>
	    

	
</LinearLayout>
